# llama-bro

./: .gitignore  .gitmodules  CLAUDE.md  README.md  build.gradle.kts  jitpack.yml  settings.gradle.kts
.github/workflows/: build.yml  release.yml
app/: build.gradle.kts
app/src/androidTest/java/com/suhel/llamabro/demo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/suhel/llamabro/demo/: LlamaBroApplication.kt  MainActivity.kt  MainViewModel.kt  Mappers.kt
app/src/main/java/com/suhel/llamabro/demo/di/: ApplicationScope.kt  CoroutineModule.kt
app/src/main/java/com/suhel/llamabro/demo/model/: ChatMessage.kt  Conversation.kt  CuratedModels.kt  CurrentInferenceContext.kt  CurrentModel.kt  MessageRole.kt  Model.kt  ModelDownloadState.kt  ModelZoo.kt
app/src/main/java/com/suhel/llamabro/demo/navigation/: Route.kt
app/src/main/java/com/suhel/llamabro/demo/ui/: AppScaffold.kt
app/src/main/java/com/suhel/llamabro/demo/util/: FlowExt.kt
app/src/main/res/drawable/: arrow_circle_up_24.xml  check_circle_24.xml  cloud_24px.xml  cognition_24.xml  cognition_filled_24.xml  content_copy_24.xml  delete_sweep_24.xml  play_arrow_24px.xml  stop_circle_24.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/test/java/com/suhel/llamabro/demo/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
sdk/: build.gradle.kts  consumer-rules.pro
sdk/src/androidTest/java/com/suhel/llamabro/sdk/: ExampleInstrumentedTest.kt
sdk/src/main/cpp/: CMakeLists.txt  engine.cpp  engine.h  session.cpp  session.h
sdk/src/main/cpp/engine/: engine.cpp  engine.hpp  ggml_variant_chooser.hpp
sdk/src/main/cpp/jni/: engine.cpp  jni_config_reader.hpp  jni_engine.cpp  jni_error.hpp  jni_refs.cpp  jni_refs.hpp  jni_session.cpp  llama_engine_jni.cpp  llama_session_jni.cpp  session.cpp
sdk/src/main/cpp/parsers/: tag.hpp  token.hpp
sdk/src/main/cpp/result/: codes.hpp
sdk/src/main/cpp/session/: batch.hpp  session.cpp  session.hpp
sdk/src/main/cpp/utils/: error_codes.h  ggml_variant_chooser.h  jni_config_reader.h  jni_error_thrower.h  llama_exception.h  llama_utils.h  log.h  log.hpp  utf8_utils.h
sdk/src/main/java/com/suhel/llamabro/sdk/: LlamaChatSession.kt  LlamaEngine.kt  LlamaSession.kt  ProgressListener.kt
sdk/src/main/java/com/suhel/llamabro/sdk/api/: ChatSession.kt  DecodeConfig.kt  LlamaEngine.kt  LlamaError.kt  LlamaSession.kt  ModelConfig.kt  OverflowStrategy.kt  PromptFormat.kt
sdk/src/main/java/com/suhel/llamabro/sdk/chat/: ChatCompletionEvent.kt  ChatCompletionOptions.kt  ChatEvent.kt  ChatMessage.kt  CompletionResult.kt  CompletionSnapshot.kt  LlamaChatCompletion.kt  LlamaChatSession.kt  Usage.kt
sdk/src/main/java/com/suhel/llamabro/sdk/config/: Capability.kt  ModelConfig.kt  ModelProfile.kt  ModelProfiles.kt  SessionConfig.kt  ThinkingCapabilities.kt
sdk/src/main/java/com/suhel/llamabro/sdk/engine/: LlamaEngine.kt  LlamaSession.kt  TokenGenerationResult.kt
sdk/src/test/java/com/suhel/llamabro/sdk/: ExampleUnitTest.kt  LlamaChatSessionImplTest.kt  LlamaChatSessionTest.kt
(+89 files in other folders)
